# bonanza-bridge-fw

./: .gitignore  .rustfmt.toml  Cargo.toml  Embed.toml  README.md  build.rs  memory.x
.github/workflows/: ci.yml
docs/: safety-interlock.md
src/: image_manifest.rs  info.rs  lib.rs  main.rs  pio_uart.rs  rx_stats.rs  safety.rs  safety_timing.rs  uart.rs  uart_codec.rs  uart_timing.rs
src/control/: adc.rs  fan.rs  gpio.rs  i2c.rs  led.rs  mod.rs  system.rs
