[package]
name = "firmware"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
const-murmur3 = "0.2.1"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "timer-item-payload-size-1"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embedded-io-async = "0.6.1"
heapless = { version = "0.8.0", features = ["portable-atomic", "defmt-03"] }
hex = { version = "0.4.3", default-features = false }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
portable-atomic = { version = "1.5", default-features = false, features = ["critical-section"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
static_cell = "2.1.0"
smart-leds = "0.4.0"

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
